--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+Jinja2==3.1.6
 jiter==0.10.0
+MarkupSafe==3.0.2
 openai==1.97.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+python-multipart==0.0.20
 sniffio==1.3.1
 starlette==0.47.2
 tqdm==4.67.1
