--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.116.1
 google-generativeai==0.8.5
 Jinja2==3.1.6
 openai==1.97.1
+Pillow==11.3.0
 pydantic==2.11.7
 python-dotenv==1.1.1
 python-multipart==0.0.20
