--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Jinja2==3.1.6
 openai==1.97.1
 Pillow==11.3.0
 pydantic==2.11.7
+pytest==8.4.1
 python-dotenv==1.1.1
 python-multipart==0.0.20
 uvicorn==0.35.0
